--- a/css/style.css
+++ b/css/style.css
@@ -77,14 +77,12 @@ div {
 }
 
 footer{
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(90deg, #000000 0%, #0000ff  25%, #0066ff 70%, #000000 100%);
     border: #FFFFFF 5px solid;
 }
 
 footer p {
-    font-size: 20px;;
+    font-size: 20px;
     text-align: right;
     padding: 15px, 15px, 15px, 0px;
-    color: #FFFFFF;
 }
