--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', 'Verdana';
     background-color: #000000;
     color: #FFFFFF;
-    margin: 20px, 20px, 0px, 20px;
+    margin: 20px 20px 0px 20px;
 }
 
 h1 {
@@ -18,7 +18,7 @@ h2 {
 
 p {
     font-size: 24px;
-    padding: 10px, 0px, 0px, 10px;
+    padding: 10px 0px 0px 10px;
 }
 /* All images are centered  */
 img{
@@ -44,14 +44,14 @@ div {
     background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-width: 0px, 0px, 2px, 5px;
+    border-width: 0px 0px 2px 5px;
 }
 
 .blue {
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-width: 2px, 5px, 0px, 0px;
+    border-width: 2px 5px 0px 0px;
 }
 
 .blue h2, .blue p{
@@ -62,7 +62,7 @@ div {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-width: 0px, 0px, 2px, 5px;
+    border-width: 0px 0px 2px 5px;
 }
 
 .yellow p {
@@ -73,7 +73,7 @@ div {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-width: 2px, 5px, 0px, 0px;
+    border-width: 2px 5px 0px 0px;
 }
 
 footer{
@@ -84,5 +84,5 @@ footer{
 footer p {
     font-size: 20px;
     text-align: right;
-    padding: 15px, 15px, 15px, 0px;
+    padding: 15px 15px 15px 0px;
 }
